#pragma once

#include "shapes/Hitable.h"

namespace raytracy::raytracer {
	/*class Scene {
		private:
		std::vector<shared_ptr<raytracer::Hitable>> objects;

		public:
		Scene() = default;
		Scene(shared_ptr<raytracer::Hitable> object) { Add(object); }
		~Scene() = default;

		void Clear() { objects.clear(); }
		void Add(shared_ptr<raytracer::Hitable> object) { objects.push_back(object); }

		bool HitObjects(const Ray& ray, float min, float max, Hit& hit) const;
	};*/
}


